--- a/frontend/src/lib/global.css
+++ b/frontend/src/lib/global.css
@@ -1,5 +1,8 @@
 body {
 	background-color: #0e0d11;
+	background-image: url('blueishbg.png');
+    /* background-attachment: fixed; */
+	margin: 0;
 }
 
 h1 {
